Sun Sep 19 23:56:18 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkmenu.c (MENU_SCROLL_TIMEOUT2): Change from 50 to 20 to
	make the menus scroll faster.

2004-09-19  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.5.3 ===

2004-09-18  Matthias Clasen  <mclasen@redhat.com>

	Make GtkFileChooserButton activatable via mnemonics.
	(#152925, Dennis Cranston, patch by James M. Cape)

	* gtk/gtkfilechooserbutton.c: Add a ::mnemonic-activate signal
	and a suitable default handler.

	* tests/testfilechooserbutton.c: Add a mnemonic.

2004-09-18  Matthias Clasen  <mclasen@redhat.com>

	Fix win32 build errors.  (#153032, #153028, Robert Ögren)

	* gdk/win32/gdkmain-win32.c: Make it compile.  

	* gtk/gtkmain.c: Include glib.h.  

2004-09-18  Federico Mena Quintero  <federico@ximian.com>

	Merged from 2.4:

	* gtk/gtkfilesystem.h: Removed the GTK_FILE_PATH() and
	GTK_IS_FILE_PATH() macros.  They are not supposed to exist, as
	GtkFilePath is not an object.  And they never worked, anyway.

2004-09-18  Marco Pesenti Gritti  <marco@gnome.org>

	* gtk/gtkentry.c: (gtk_entry_completion_key_press):

	Make numeric pad enter activate the selected completion
	entry. Fix bug 143486 reported by Edd Dumbill.

2004-09-17  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

	* gtk/gtkfilechooserdefault.c (select_func): Scroll to the selected
	row.  (#143868, Christian Persch)

2004-09-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_render): Remove
	leftover debug code.

	Improve the behaviour of the file chooser in save mode. Fixes bugs
	#151031, #151608, #151994 reported by Owen Taylor and Alexander 
	Larsson.
	
	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_set_property): 
	(location_entry_create): Propagate the action to the file 
	chooser entries.
	(gtk_file_chooser_default_should_respond): Switch folders if 
	the user enters a directory name in the entry and clear the entry