@@ -1,3 +1,9 @@
+2004-09-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkbutton.c (gtk_button_class_init): Add a boolean ::displace-focus
+	style property and apply child displacement to the focus rectangle 
+	if it is TRUE.  (#141170, Soeren Sandmann)
+
 Sun Sep 19 23:56:18 2004  Søren Sandmann  <sandmann@redhat.com>
 
 	* gtk/gtkmenu.c (MENU_SCROLL_TIMEOUT2): Change from 50 to 20 to
